--- a/dig-till/src/App.css
+++ b/dig-till/src/App.css
@@ -1,38 +1,42 @@
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #eeee;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
+}
+
+header, main, footer {
+  flex-shrink: 0;
+}
+
+.header {
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.navbar ul {
+  display: flex;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style: none;
+  padding: 0;
+  background-color: #b2afaf;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar li {
+  margin: 0 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divider {
+  height: 2px;
+  background-color: #ddd;
+  margin: 30px auto;
+  width: 90%;
 }
