--- a/dig-till/src/App.css
+++ b/dig-till/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -11,7 +10,14 @@ body {
   min-height: 100vh;
 }
 
-header, main, footer {
+html {
+  scroll-padding-top: 150px;
+  /* Adjust this value to match the height of your sticky elements */
+}
+
+header,
+main,
+footer {
   flex-shrink: 0;
 }
 
@@ -19,6 +25,10 @@ header, main, footer {
   text-align: center;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+.devborder {
+  border: 1px solid red;
 }
 
 .navbar ul {
