--- a/dig-till/src/App.css
+++ b/dig-till/src/App.css
@@ -22,7 +22,7 @@ footer {
 }
 
 .header {
-  text-align: left;
+  text-align: center;
   background-color: #f2f2f2;
   padding: 20px;
 }
@@ -34,7 +34,7 @@ footer {
 .navbar ul {
   display: flex;
   width: 100%;
-  justify-content: left;
+  justify-content: center;
   list-style: none;
   padding: 0;
   background-color: #b2afaf;
