--- a/dig-till/src/components/Components.css
+++ b/dig-till/src/components/Components.css
@@ -47,7 +47,7 @@
 
   .image-container {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
