--- a/dig-till/src/App.css
+++ b/dig-till/src/App.css
@@ -31,13 +31,26 @@ footer {
   border: 1px solid red;
 }
 
+/* styles.css */
+.custom-hover {
+  color: white;
+  /* Default color */
+  text-decoration: none;
+  /* Remove underline */
+}
+
+.custom-hover:hover {
+  color: #0d6efd;
+  /* Blue on hover */
+}
+
 .navbar ul {
   display: flex;
   width: 100%;
   justify-content: center;
   list-style: none;
   padding: 0;
-  background-color: #b2afaf;
+  background-color: #343a40;
 }
 
 .navbar li {
